
* Configuration option $allow_comment_email (default true) which
  indicates if an email is sent for each comment made.  If the Cc
  field in the add comment page is filled, an email will be sent to
  that address regardless.

* The default page shown by Codestriker is the list of open topics,
  rather than all topics in the system.

Version 1.7.4

* Major documentation rewrite.  All documentation (installation/user
  guide/hacking) is now present in doc/codestriker.sgml, in DocBook
  format.

* Now have simple "Help" links on all screens, which link to the
  appropriate HTML segment of the Codestriker User's guide.

* The Bugzilla database name can be explicitly specified in the
  Codestriker configuration, to cater for non-standard Bugzilla
  deployments.

* Modified handling of Subversion diffs so it can handle diffs of the
  form cvs diff -r2:3 filename.

The following changes below were from Jason Remillard
<jremillardshop@yahoo.com>:

* The Codestriker title is now a link to the list topic page.

* If Bugzilla integration is not enabled (empty $bug_db), hide all of
  the references to the topic bug id (topic list, new topic, view
  topic and search).

* Added some additional help in the create topic page to clarify with 
  usage of the start tag, end tag and module fields.

* Hide the project combo box if the user does not have projects
  enabled.

* Fixed some spelling mistakes in the create topic pop-up help.

* The rows in the delta table that are associated with a topic were
  not deleted when a topic is deleted.

Version 1.7.3

* Make sure comments are properly HTML-escaped in the list comments
  screen, to avoid display problems when comments contain HTML tags.

* Tooltip comments should not be HTML-escaped, for correct rendering.

* Make sure after conducting a search, that pressing the "back" button
  will go back to the form with the search parameters still present.

* Modified checksetup.pl so that the module dependencies are checked