@@ -78,6 +78,24 @@ $file_viewer =
     '/home/sits/cvs' => 'http://localhost/cgi-bin/cvsweb.cgi'
 };
 
+# The number of problems found per line drops if the size of the 
+# topic is too large. A common inspection pitfall is for authors to 
+# attempt to review too much material and then miss problems. 
+# These two options allow the Codestriker administrator to limit 
+# the length of the topics. Topics that have more lines than 
+# $maximum_topic_size_lines are rejected when they are created. 
+# Topics that are larger than $suggested_topic_size_lines generate 
+# a warning displayed in the topic page, but are accepted into the 
+# system. Codestriker measures that length of the topic by counting 
+# the number of lines in the topic text.
+#
+# The codestriker default of not enforcing any limits is specified by
+# settings either option to an empty string. If you are not sure 
+# what a resonable limit would be, start with a suggested_topic_size_lines
+# set to 350, and adjust with experence.
+$maximum_topic_size_lines = '';
+$suggested_topic_size_lines = '';
+
 # The default viewing mode to use in the URL when creating a topic.  Can
 # be either ($NORMAL_MODE, $COLOURED_MODE or $COLOURED_MONO_MODE).  These
 # values should not be changed.
